qttools-opensource-src (5.2.1-8) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * Simplify libqt5designercomponents5.symbols a bit more.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 18 Mar 2014 10:22:06 +0400

qttools-opensource-src (5.2.1-7) experimental; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Update symbols files with buildd's logs.
  * Apply fix_path_to_lrelease.patch to fix the path of lrelease in CMake files
    (Closes: #738196).
  * Simplify list of archs in symbols files: only mark sparc when suitable.

  [ Dmitry Shachnev ]
  * Update symbols files to support arm64 and ppc64el.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 17 Mar 2014 12:04:18 -0300

qttools-opensource-src (5.2.1-6) experimental; urgency=medium

  * Update symbols files with buildd's logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 26 Feb 2014 16:28:28 -0300

qttools-opensource-src (5.2.1-5) experimental; urgency=medium

  * Update symbols files with buildd's logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 24 Feb 2014 22:35:01 -0300

qttools-opensource-src (5.2.1-4) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * Update debian/libqt5designer5.symbols from buildds’ logs.
  * Build qtxmlpatterns5-doc package from this source.
    This should finally solve the dependency loop problem.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 13 Feb 2014 11:35:20 -0300

qttools-opensource-src (5.2.1-3) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * Set version number to 5.2.1-3 to correctly handle upgrades
    for qtdeclarative5-doc package.
  * Build qtdeclarative5-doc package from this source.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Update symbols files with buildd's and current logs.
  * Add qtdeclarative5-private-dev to build lrelease with qml support
    (Closes: #738617).
