@@ -2,6 +2,7 @@ qttools-opensource-src (5.2.1-8) UNRELEASED; urgency=medium
 
   [ Dmitry Shachnev ]
   * Simplify libqt5designercomponents5.symbols a bit more.
+  * Update copyright files for all external docs, not just for qtbase.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 18 Mar 2014 10:22:06 +0400
 
